--- a/odoo_training/odoo_training.conf
+++ b/odoo_training/odoo_training.conf
@@ -4,5 +4,5 @@ db_port = False
 db_user = False
 db_password = False
 admin_passwd = $pbkdf2-sha512$600000$LQXg/P./N.a8F4IQghACIA$obsIzCLEWYo/tBtDraQzvq2XVa8vA2HZ6NVDlcv.agtdwj/WIgF0D4i.qBB40AbfxIWiT49sNVRqRHZ.OCN2Gw
-
+addons_path=addons,custom-addons
 #log_handler = odoo.sql_db:DEBUG
